Change H2 lineheight to fix letter cutoff

--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,7 @@ nav img {
 .name h2 {
   font-size: 4vw;
   font-weight: 400;
-  line-height: 3vw;
+  line-height: 4vw;
   margin: 0;
   text-align: center;
 }
